# Music_ciphep

./: CMakeLists.txt
mc_core/include/mc_pr/: mainwindow.hpp  mymidi.hpp  mymusiccipher.hpp
mc_core/src/: mymidi.cpp
mc_debug/: CMakeLists.txt
mc_debug/src/: main.cpp
musical_cipher/mc_core/: CMakeLists.txt
musical_cipher/mc_core/src/: mainwindow.cpp  mainwindow.ui  mymusiccipher.cpp
musical_cipher/mc_release/: CMakeLists.txt
musical_cipher/mc_release/src/: main.cpp
